# AlphaAi

./: .env.development  .env.example  .env.production  .gitignore  Dockerfile  HARDEST_BUG.md  Procfile  README.md  README_API.md  SUBMISSION.md  api.py  app.py  backtest.py  backtest_results.jsonl  backtest_summary.json  dashboard.py  data_fetcher.py  demo.py  demo_mongodb_persistence.py  docker-compose.yml  engine.py  main.py  mongo-init.js  netlify.toml  nginx.conf  pyproject.toml  pytest.ini  requirements.txt  supabase_client.py  test_engine.py
.kiro/specs/bitcoin-prediction-api/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/bitcoin-probabilistic-forecasting/: .config.kiro  design.md  requirements.md  tasks.md
.streamlit/: config.toml  secrets.toml.example
bitcoin_forecasting/: __init__.py  config.py  persistence.py
bitcoin_forecasting/backtesting/: __init__.py  backtesting.py
bitcoin_forecasting/data/: __init__.py  data_ingestion.py
bitcoin_forecasting/evaluation/: __init__.py  metrics.py
bitcoin_forecasting/models/: __init__.py  ewma.py  gbm_engine.py
bitcoin_forecasting/utils/: __init__.py  logging_config.py
bitcoin_prediction_api/: __init__.py  config.py  dependencies.py  logging_config.py  main.py  middleware.py
bitcoin_prediction_api/api/: __init__.py  health.py  prediction.py
bitcoin_prediction_api/models/: __init__.py  health.py  prediction.py
bitcoin_prediction_api/persistence/: __init__.py  mongodb_persistence.py
bitcoin_prediction_api/services/: __init__.py  health_service.py  math_engine_service.py  prediction_engine_service.py  prediction_service.py  real_time_data_fetcher.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  api.js  hooks.js  index.css  utils.js
frontend/src/components/: BacktestChart.jsx  Header.jsx  MetricsPanel.jsx  PredictionCard.jsx  ui.jsx
tests/: __init__.py  test_config.py  test_dashboard.py  test_main.py  test_math_engine_integration.py  test_mongodb_persistence.py  test_persistence.py  test_prediction_engine_integration.py
tests/test_backtesting/: __init__.py  test_backtesting.py
tests/test_bitcoin_prediction_api/: __init__.py  test_config.py  test_models.py  test_prediction_engine_service.py
tests/test_data/: __init__.py  test_data_ingestion.py
tests/test_evaluation/: __init__.py  test_metrics.py
tests/test_models/: __init__.py  test_ewma.py  test_gbm_engine.py
tests/test_utils/: test_logging_config.py
